--- a/GraphEngineMolule.csproj
+++ b/GraphEngineMolule.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="GraphEngine.Core" Version="2.0.9328" />
     <PackageReference Include="GraphEngine.LIKQ" Version="2.0.9328" />
     <PackageReference Include="GraphEngine.Storage.Composite" Version="2.0.9328" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="2.1.0-preview2-final" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-preview-03" />
   </ItemGroup>
 
