--- a/GraphEngineMolule.csproj
+++ b/GraphEngineMolule.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="GraphEngine.Storage.Composite" Version="2.0.9328" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="2.1.0-preview2-final" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-preview-03" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.console" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
